--- a/package.json
+++ b/package.json
@@ -35,10 +35,11 @@
     "@angular/router": "^19.2.10",
     "@angular/service-worker": "^19.2.10",
     "@ng-bootstrap/ng-bootstrap": "^17.0.1",
+    "@popperjs/core": "^2.11.8",
     "zone.js": "~0.15.0"
   },
   "devDependencies": {
-    "@angular-devkit/build-angular": "^20.0.1",
+    "@angular-devkit/build-angular": "^19.2.0",
     "@angular/cli": "^19.2.11",
     "@angular/compiler-cli": "^19.2.10",
     "@types/jasmine": "~3.6.0",
