--- a/package.json
+++ b/package.json
@@ -1,22 +1,23 @@
 {
-  "name": "jayantgoel001.github.io",
+  "name": "albertohdze.github.io",
   "version": "2.0.0",
-  "description": "Jayant Goel (JayantGoel001)'s Personal Portfolio",
+  "description": "Alberto Hernandez Espinosa - Personal Portfolio",
   "main": "index.js",
-  "author": "Jayant Goel",
+  "author": "Alberto Hernandez Espinosa",
   "license": "MIT",
   "bugs": {
-    "url": "https://github.com/JayantGoel001/JayantGoel001.github.io/issues"
+    "url": "https://github.com/albertoHdzE/website/issues"
   },
   "keywords": [
-    "Jayant",
-    "Jayant Goel",
-    "Jayant Goel Portfolio",
-    "JayantGoel001",
-    "Jayant Goel (JayantGoel001)'s Personal Portfolio"
+    "Alberto Hernandez Espinosa",
+    "Portfolio",
+    "PhD",
+    "Philosophy of Science",
+    "AI",
+    "Complex Systems"
   ],
-  "repository": "https://github.com/JayantGoel001/JayantGoel001.github.io",
-  "homepage": "https://JayantGoel001.github.io",
+  "repository": "https://github.com/albertoHdzE/website",
+  "homepage": "https://albertoHdzE.github.io/website",
   "scripts": {
     "ng": "ng",
     "start": "ng serve",
